# Student_app

./: .gitignore  README.md  api_response.html  last_valid_schedules.json  main.py  notes.json  previous_schedules.json  pyproject.toml  requirements.txt  schedules.json  settings.json
data/: notes.json  schedules.json  settings.json
logic/: __init__.py
logic/logic_notes/: __init__.py  notes_data.py  notes_manager.py  notes_notifications.py  notes_utils.py  notes_validation.py
logic/logic_schedule/: __init__.py  schedule_data.py  schedule_manager.py  schedule_notifications.py  schedule_utils.py  schedule_validation.py
logic/logic_selector_group/: __init__.py  group_api.py  group_selection_data.py  group_selection_manager.py  group_selection_utils.py
logic/logic_settings/: __init__.py  settings_data.py  settings_manager.py  settings_utils.py
models/: schedule_model.py
services/: storage_service.py
ui/: __init__.py  ui_group_selection.py  ui_notes.py  ui_schedule.py  ui_settings.py
viewmodels/: schedule_vm.py
views/: group_selection_view.py  notes_view.py  schedule_view.py  settings_view.py
